fixed skill icons not showing

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -519,7 +519,7 @@ body {
 
   }
 
-  .skill-icons {
+  .left .skill-icons {
     display: none;
   }
 
